#
# This file is part of the TEN Framework project.
# See https://github.com/TEN-framework/ten_framework/LICENSE for license
# information.
#
import("//build/ten_runtime/glob.gni")

glob("extension") {
  file_list = all_native_files
  deps = [
    "extension_info",
    "internal",
    "msg_dest_info",
    "ten_env",
  ]
}
